--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -1,18 +1,16 @@
+
+on: push
 name: Publish Website to CPanel
-on:
-  push:
-    branches:
-      - master
 jobs:
   FTP-Deploy-Action:
-    name: FTP-Deploy-Action
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.1.0
-      with:
-        fetch-depth: 2
-    - name: FTP-Deploy-Action
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
+    - name: get lastest code
+      uses: actions/checkout@v3
+      
+    - name: sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
         ftp-server: ${{secrets.FTP_SERVER}}
         ftp-username: ${{secrets.FTP_USERNAME}}
