--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -29,7 +29,7 @@ jobs:
       uses: dawidd6/action-send-mail@v3
       with:
         connection_url: ${{secrets.MAIL_CONNECTION}}
-        server_address: smtp.gmail.com
+        server_address: mail.maracsoft.com
         server_port: 465
         secure: true
         subject: Github Actions job result
