--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -30,11 +30,8 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ${{ github.actor }} created commit:
-          Commit message: ${{ github.event.commits[0].message }}
-
           Repository: ${{ github.repository }}
+          Autor: ${{ github.actor }} 
+          Commit: ${{ github.event.commits[0].message }}
 
-          See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
-
-
+          Ver cambiso: https://github.com/${{ github.repository }}/commit/${{github.sha}}
