--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -13,7 +13,7 @@ jobs:
     - name: send telegram message on push
       uses: appleboy/telegram-action@master
       with:
-        to: ${{ secrets.TELEGRAM_TO }}
+        to: ${{ vars.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
           STARTED DEPLOY:
@@ -29,8 +29,8 @@ jobs:
     - name: sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        server: ${{secrets.FTP_SERVER}}
-        username: ${{secrets.FTP_USERNAME}}
+        server: ${{vars.FTP_SERVER}}
+        username: ${{vars.FTP_USERNAME}}
         password: ${{secrets.FTP_PASSWORD}}
         exclude: |
           **/.git*
@@ -42,7 +42,7 @@ jobs:
     - name: send telegram message on push
       uses: appleboy/telegram-action@master
       with:
-        to: ${{ secrets.TELEGRAM_TO }}
+        to: ${{ vars.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
           FINISHED DEPLOY:
